# apt-engine

./: .gitignore  .importlinter  CITATION.cff  CODEOWNERS  NOTICE  PROM_16_HARDENING_2026-07-13.md  README.md  apt-impact.json  pyproject.toml
.github/workflows/: ci.yml
PROVENANCE/: priority-20260715.manifest  priority-20260715.manifest.ots
docs/: ADR-0001-apt-engine-standalone-extraction.md  ADR-0002-scope-fork-cut-belt.md  ADR-0003-trusted-runner-and-manifest-trust-root.md  ADR-0004-kg-manifest-source.md  PROMOTION_CHECKLIST.md
ooptdd_target/: __init__.py  adapter.py  requirements.yaml
scripts/: lakatos_score.py
src/apt_engine/: __init__.py  cli.py  detect.py  gate.py  gate_override.py  legion.py  phase_map.py  phases.py  precondition.py  receipt.py  replay.py
src/apt_engine/contrib/: __init__.py  breaker_gate.py  circuit_breaker.py  gate_override.py  gate_policy.py  kg_manifest.py  opa.py
src/apt_engine/contrib/resolver/: __init__.py  drift.py  render.py
src/apt_engine/frontends/: mcp_server.py
src/apt_engine/resolver/: config_source.py
tests/: test_breaker_gate.py  test_circuit_breaker.py  test_cli_gate.py  test_contrib_boundary.py  test_detect.py  test_fix_harness_20260627.py  test_gate.py  test_gate_algebra_exhaustive.py  test_gate_override.py  test_gate_policy.py  test_impact_binding.py  test_kg_manifest.py  test_legion.py  test_manifest_source.py  test_mcp_frontend.py  test_measured_preflight.py  test_opa.py  test_phase_map.py  test_phases.py  test_precondition.py  test_receipt.py  test_replay.py  test_resolver_drift.py
tests/fixtures/roadmap_repo/: apt-progress.md
tests/fixtures/scw_repo/: apt-progress.md  feature-spans.json
tests/impact/: test_apt_contract.py
